--- a/ControleFinanceiro/ControleFinanceiro.Tests/ControleFinanceiro.Tests.csproj
+++ b/ControleFinanceiro/ControleFinanceiro.Tests/ControleFinanceiro.Tests.csproj
@@ -129,6 +129,13 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Home.feature.cs</LastGenOutput>
     </None>
+    <Content Include="Web.config" />
+    <Content Include="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Include="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ControleFinanceiro\ControleFinanceiro.csproj">
