--- a/ControleFinanceiro/ControleFinanceiro/Web.config
+++ b/ControleFinanceiro/ControleFinanceiro/Web.config
@@ -107,7 +107,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataContext" providerName="System.Data.SqlServerCe.4.0" connectionString="Data Source=C:\Users\Felipe Soares\Documents\Visual Studio 2013\Projects\ControleFinanceiro\ControleFinanceiro.sdf;Password=123;Persist Security Info=True" />
+    <add name="DataContext" providerName="System.Data.SqlServerCe.4.0" connectionString="Data Source=C:\Users\felipepires\Documents\GitHub\ControleFinanceiro\ControleFinanceiro\ControleFinanceiro.sdf;Password=123;Persist Security Info=True" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
