--- a/ControleFinanceiro/ControleFinanceiro/ControleFinanceiro.csproj
+++ b/ControleFinanceiro/ControleFinanceiro/ControleFinanceiro.csproj
@@ -163,6 +163,7 @@
     </Compile>
     <Compile Include="Models\EntradaModel.cs" />
     <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\SaidaModel.cs" />
     <Compile Include="NavigationRoutes\INavigationRouteFilter.cs" />
     <Compile Include="NavigationRoutes\NamedRoute.cs" />
     <Compile Include="NavigationRoutes\NavigationExtensions.cs" />
